--- a/JOIN/join.html
+++ b/JOIN/join.html
@@ -116,6 +116,21 @@ body{
   line-height: 1.5;
   letter-spacing: 0;
 }
+.tit_article{
+  display: block;
+  margin-top: 15px;
+  font-weight: bold;
+}
+
+.tit{
+  /*display: block;
+  margin: 10px 0 3px;*/
+  font-weight: bold;
+}
+.agree_wrap p{
+  margin: 0;
+  padding: 0;
+}
 /**************************************************************************/
 /**************************************************************************/
 .footer{
