--- a/JOIN/join.html
+++ b/JOIN/join.html
@@ -6,10 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>약관 동의</title>
 <style>
-/**{
+*{
   margin:0; padding:0;
   text-decoration: none;
-}*/
+}
+ul, ol{
+  list-style: none;
+}
 body{
   background: #ececee;
 }
@@ -98,7 +101,7 @@ body{
   font-size: 14px;
   line-height: 50px;
 }
-.box span{
+.box>span{
   float: left;
 }
 #check{
@@ -121,15 +124,18 @@ body{
   margin-top: 15px;
   font-weight: bold;
 }
-
 .tit{
-  /*display: block;
-  margin: 10px 0 3px;*/
+  display: block;
+  margin: 10px 0 3px;
   font-weight: bold;
 }
+.txt_num{
+  float: left;
+  width: 14px;
+  text-indent: 1px;
+}
 .agree_wrap p{
-  margin: 0;
-  padding: 0;
+  margin: 0; padding: 0;
 }
 /**************************************************************************/
 /**************************************************************************/
