--- a/JOIN/join.html
+++ b/JOIN/join.html
@@ -4,147 +4,227 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>약관 동의</title>
+  <title>개인 가입 약관 동의</title>
 <style>
-*{
-  margin:0; padding:0;
-  text-decoration: none;
-}
-ul, ol{
-  list-style: none;
-}
-body{
-  background: #ececee;
-}
+      *{
+        margin:0; padding:0;
+        text-decoration: none;
+      }
+      ul, ol{
+        list-style: none;
+      }
+      body{
+        background: #ececee;
+      }
 /**************************************************************************/
-.wrap{
-  width: 700px; height: 1030px;
-  /*border: 1px #F00 solid;*/
-  background-color: #FFF;
-  /*position: relative;*/
-  margin: 0 auto;
-}
+      .wrap{
+        width: 700px; height: 1030px;
+        /*border: 1px #F00 solid;*/
+        background-color: #FFF;
+        /*position: relative;*/
+        margin: 0 auto;
+      }
 /**************************************************************************/
-
-
-.header{
-  height: 90px;
-  border-bottom: 1px #e6e6e6 solid;
-}
-.header img{
-  width: 98px; height: 40px;
-  margin: 20px 301px;
-}
-
-/*.header a{display: block;}*/
-
+      .header{
+        height: 90px;
+        border-bottom: 1px #e6e6e6 solid;
+      }
+      .header img{
+        width: 98px; height: 40px;
+        margin: 20px 301px;
+      }
+      /*.header a{display: block;}*/
 /**************************************************************************/
 /**************************************************************************/
-.content{
-  width: 620px; height: 706px;
-  /*border: 1px tomato solid;*/
-  margin: 0 40px 100px 40px;
-  /*padding-top: 20px;*/
-}
+      .content{
+        width: 620px; height: 706px;
+        /*border: 1px tomato solid;*/
+        margin: 0 40px 100px 40px;
+        /*padding-top: 20px;*/
+      }
 /**************************************************************************/
-.paging{
-  width: 48px; height: 6px;
-  margin: 14px auto 0 auto;
-}
-
-.paging a {
-  display:block;
-  float:left;
-  border: 3px solid #ddd;
-  margin:0 3px;
-  border-radius:15px;
-}
-.paging span {display:none}
-
+      .paging{
+        width: 48px; height: 6px;
+        margin: 14px auto 0 auto;
+      }
+      .paging a {
+        display:block;
+        float:left;
+        border: 3px solid #ddd;
+        margin:0 3px;
+        border-radius:15px;
+      }
+      .paging span {display:none}
 /**************************************************************************/
-.wrap_title{
-  padding: 30px 0 39px;
-}
-
-.title{
-  font-family: '맑은 고딕','Malgun Gothic','돋움','dotum','sans-serif';
-  font-size: 18px;
-  text-align: center;
-  letter-spacing: -1px;
-}
-.title h3{
-  display: inline;
-}
-
-.title_desc{
-  overflow: hidden;
-  padding-top: 7px;
-  font-size: 14px;
-  color: #767676;
-  text-align: center;
-}
-.title_desc strong{
-  color: #306ad2;
-}
+      .wrap_title{
+        padding: 30px 0 39px;
+      }
+      .title{
+        font-family: '맑은 고딕','Malgun Gothic','돋움','dotum','sans-serif';
+        font-size: 18px;
+        text-align: center;
+        letter-spacing: -1px;
+      }
+      .title h3{
+        display: inline;
+      }
+      .title_desc{
+        overflow: hidden;
+        padding-top: 7px;
+        font-size: 14px;
+        color: #767676;
+        text-align: center;
+      }
+      .title_desc strong{
+        color: #306ad2;
+      }
 /**************************************************************************/
-.wrap_box{
-  width: 620px; height: 544px;
-}
-.box{
-  width: 618px; height: 183px;
-  border: 1px solid #d5d5d5;
-}
-.box_title{
-  height: 50px;
-  padding-left: 18px;
-  border-bottom: 1px solid #e6e6e6;
-  font-size: 14px;
-  line-height: 50px;
-}
-.box>span{
-  float: left;
-}
-#check{
-  /*float: right;*/
-  position: relative;
-  left: 418px;
-}
+      .wrap_box{
+        width: 620px; height: 544px;
+      }
+      .box{
+        width: 618px; height: 183px;
+        border: 1px solid #d5d5d5;
+      }
+      .box2{
+        width: 618px; height: 183px;
+        border: 1px solid #d5d5d5;
+        margin-top: 15px;
+      }
+      .box_title{
+        height: 50px;
+        padding-left: 18px;
+        border-bottom: 1px solid #e6e6e6;
+        font-size: 14px;
+        line-height: 50px;
+      }
+      .box>span{
+        float: left;
+      }
+      #check{
+        /*float: right;*/
+        position: relative;
+        left: 418px;
+      }
+      #check2{
+        position: relative;
+        left: 350px;
+      }
 /**************************************************************************/
-.agree_wrap{
-  color: #767676;
-  height: 132px;
-  overflow: auto;
-  padding: 0 18px;
-  font-size: 12px;
-  line-height: 1.5;
-  letter-spacing: 0;
-}
-.tit_article{
-  display: block;
-  margin-top: 15px;
-  font-weight: bold;
-}
-.tit{
-  display: block;
-  margin: 10px 0 3px;
-  font-weight: bold;
-}
-.txt_num{
-  float: left;
-  width: 14px;
-  text-indent: 1px;
-}
-.agree_wrap p{
-  margin: 0; padding: 0;
-}
+      .agree_wrap{
+        color: #767676;
+        height: 132px;
+        overflow: auto;
+        padding: 0 18px;
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 0;
+      }
+      .tit_article{
+        display: block;
+        margin-top: 15px;
+        font-weight: bold;
+      }
+      .tit{
+        display: block;
+        margin: 10px 0 3px;
+        font-weight: bold;
+      }
+      .txt_num{
+        float: left;
+        width: 14px;
+        text-indent: 1px;
+      }
+      .agree_wrap p{
+        margin: 0; padding: 0;
+      }
 /**************************************************************************/
+      .wrap_btn{
+        position: relative;
+        min-height: 41px;
+        margin-top: 40px;
+        text-align: center;
+        /*border: 1px #F00 solid;*/
+        width: 620px; height: 119px;
+      }
+      #btn_agree{
+        width: 220px; height: 60px;
+        background: #999;
+        font-size: 18px;
+        border-radius: 0;
+        color: #fff;
+        /*margin: 0 auto;*/
+        /*text-align: center;*/
+      }
+      #btn_back{
+        float: left;
+        width: 21px; height: 21px;
+        margin-right: 10px;
+        background-position: -90px -50px;
+        border-radius:15px;
+        background-color: #FFF;
+        border: 1px #CCC solid;
+      }
+      .wrap_back_btn{
+        position: absolute;
+        top: 20px;
+        left: 0;
+        line-height: 21px;
+        width: 83px; height: 21px;
+        /*span*/
+        font-size: 14px;
+        font-family: '맑은 고딕','Malgun Gothic','돋움','dotum','Apple SD Gothic Neo','sans-serif';
+        color: #1e1e1e;
+        letter-spacing: -1px;
+      }
+      .wrap_join_btn{
+        width: 500px;
+        margin: 0 auto;
+      }
+      #join_kakao{
+        border-radius: 27px;
+        width: 198px;  height: 27px;
+        margin: 30px 5px 0;
+        border: 1px solid #b4b4b4;
+        font-family: '돋움',doutm,'Apple SD Gothic Neo','sans-serif';
+        font-size: 12px;
+        line-height: 30px;
+        letter-spacing: 0;
+        background: #fff;
+      }
+      #join_group{
+        border-radius: 27px;
+        width: 180px;  height: 27px;
+        margin: 30px 5px 0;
+        border: 1px solid #b4b4b4;
+        font-family: '돋움',doutm,'Apple SD Gothic Neo','sans-serif';
+        font-size: 12px;
+        line-height: 30px;
+        letter-spacing: 0;
+        background: #fff;
+      }
 /**************************************************************************/
-.footer{
-  height: 115px;
-  border top: 1px #e6e6e6 solid;
-  padding-top: 18px;
-}
-
+      .footer{
+        height: 115px;
+        border-top: 1px #e6e6e6 solid;
+        padding-top: 18px;
+        /*a태그 가운데 정렬시키기*/
+        text-align: center;
+      }
+      .footer a{
+        color: #767676;
+        font: bold;
+        display: inline-block;
+        text-decoration: none;
+        /*font속성*/
+        font-family: '돋움','dotum','Apple SD Gothic Neo','sans-serif';
+        font-size: 12px;
+        text-align: center;
+      }
+      .bar{
+        margin: 0 7px 0 11px;
+        color: #d4d4d4;
+      }
 </style>
 </head>
 <body>
@@ -154,9 +234,7 @@ body{
   <div class="header">
     <h1><a href="http://www.daum.net/"><img src="http://postman.kr/newsletter/20130507/images/inside02_img01.gif" alt="다음 로고"></a></h1>
   </div>
-
-
-
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
   <div class="content">
 
     <div class="paging">
@@ -164,12 +242,12 @@ body{
     <a href="#"><span>2</span></a>
     <a href="#"><span>3</span></a>
     </div>
-
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
     <div class="wrap_title">
       <div class="title"><h3>개인 가입 약관 동의</h3></div>
       <div class="title_desc"><span>서비스 약관 및 개인정보 수집, 이용에 <strong>동의</strong>해 주세요.</span></div>
     </div>
-
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
     <div class="wrap_box">
       <div class="box">
 
@@ -177,7 +255,7 @@ body{
           <span>Daum 서비스 약관 동의</span>
           <input type="checkbox" id="check">
         </div>
-
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
         <div id="agree_wrap" class="agree_wrap">
           <strong class="tit_article">제 1 장 총 칙</strong>
           <span class="tit">제 1 조 목적</span>
@@ -566,15 +644,58 @@ body{
           <p>본 약관은 2016년 10월 7일부터 적용됩니다. 단, 본 약관의 공지 시점으로부터 적용일 전일까지 기간 동안에 가입한 신규회원에 대해서는 회원 가입시부터 본 약관이 적용됩니다.</p>
           </div>
       </div>
+
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
+      <div class="box2">
+
+        <div class="box_title">
+          <span>Daum 개인정보 수집 및 이용 동의</span>
+          <input type="checkbox" id="check2">
+        </div>
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
+        <div id="agree_wrap" class="agree_wrap">
+        <strong class="tit_article tit_article2">(주)카카오는 아래의 목적으로 개인정보를 수집 및 이용하며, 회원의 개인정보를 안전하게 취급하는데 최선을 다합니다.</strong>
+        <span class="tit">1. 수집목적</span>
+        • 이용자 식별, 원활한 의사소통, 부정이용 시 제재 및 기록 <br>
+        • 회원제 서비스 제공, 문의사항 또는 불만 처리, 공지사항 전달 <br>
+        • 유료 서비스 이용 시 요금 정산 <br>
+        • 신규 서비스 개발, 이벤트 행사 시 정보 전달, 마케팅 및 광고 등에 활용 <br>
+        • 서비스 이용 기록 및 통계 분석을 통한 서비스 개선 및 맞춤형 서비스 제공 <br>
+        • 프라이버시 보호 측면의 서비스 환경 구축 <br>
+        <span class="tit">2. 수집항목</span>
+        (필수) 아이디, 비밀번호, 이름, 연락처(휴대폰번호 또는 이메일 주소 중 1개 선택) <br>
+        <span class="tit">3. 보유기간</span>
+        수집된 정보는 회원탈퇴 후 지체없이 파기됩니다.<br><br>서비스 제공을 위해 필요한 최소한의 개인정보이므로 동의를 해 주셔야 서비스 이용이 가능합니다. <br>더 자세한 내용에 대해서는
+        <a href="http://policy.daum.net/info_protection/info_protection" target="_blank" class="link_privacy">개인정보처리방침</a>을 참고하시기 바랍니다.</div>
+      </div>
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
+
+      <div class="wrap_btn">
+        <div class="wrap_back_btn">
+          <button type="button" id="btn_back"><</button>
+          <span>이전으로</span>
+        </div>
+        <button type="submit" id="btn_agree">동의하기</button>
+
+        <div class="wrap_join_btn">
+          <button id="join_kakao">카카오계정으로 가입하기&nbsp;&nbsp;&nbsp;></button>
+          <button id="join_group">사업자/단체 가입하기&nbsp;&nbsp;&nbsp;></button>
+        </div>
+      </div>
     </div>
   </div>
-
-
-
-
-
-  <div class="footer"></div>
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  -->
+  <div class="footer">
+    <a href="http://policy.daum.net/info/info">서비스 약관</a>
+    <span class="bar">|</span>
+    <a href="http://policy.daum.net/info_protection/info_protection">개인정보처리방침</a>
+    <span class="bar">|</span>
+    <a href="http://cs.daum.net/faq/59/8034.html">회원가입 도움말</a>
+    <br/>
+    <a href="http://www.kakaocorp.com/main">© Kakao Corp.</a>
+  </div>
 </div>
-
 </body>
 </html>
