--- a/SOULTREE/soultree.html
+++ b/SOULTREE/soultree.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>soultreepark</title>
-<style media="screen">
+<style>  /* http://www.soultreepark.com/view/main */
 *{
   margin: 0; padding: 0;
-  font: 13px 'Lato', 'Noto Sans KR', sans-serif;
+  text-transform: uppercase;
+  font: 14px 'Lato', 'Noto Sans KR', sans-serif;
   list-style-type: none;
   text-decoration: none;
+  color: #FFF;
 }
 .wrap{
   width: 100%;
@@ -22,96 +24,94 @@
   background-size: cover;
   /*border: 3px tomato solid;*/
 }
-.logo{
+/******************************************************************************/
+#logo_wrap{
   position: absolute;
-  top: 30%; left: 45%;
+  top: 30%; left: 25%;
+  float: left;
+  width: 50%;  height: 50px;
+}
+#logo{
+  margin: 0 45%;
 }
 
-.menu{
-  /*
-  bottom: 0;
-  left: 0;
+/******************************************************************************/
 
-  line-height: 10px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  */
+#menu{
   position: absolute;
-  bottom: 0;
-  left: 25%;
-  /*margin-top: 300px;
-  margin: auto;*/
+  bottom: 0; left: 25%;
   float: left;
-  /*width: 876px;*/
-  width: 50%;
-  height: 50px;
-
+  width: 50%;  height: 50px;
 }
-
-.menu center{
-  float:left;
-}
-
-ul li{
-  float: left;
-  /*width: 120px;*/
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  text-shadow: 2px 2px 3px #222;
-  /*display: block;*/
-}
-
-a{
-  font-size: 14px;
-  color: #FFF;
-  /*margin-right: 20px;*/
-  margin: 0 20px 0 0;
-}
-#last_a{
-  margin-right: 0;
-}
-.menu a:hover {
+#menu a:hover {
     color: #7b9c75;
 }
+ul li center{
+  float: left;
+  padding: 0 40px;
+}
+
+/******************************************************************************/
+
+#menu ul li ul{
+  display: none;
+}
+#menu ul li:hover ul{
+  display: block;
+  /*float:none;
+  margin: 0;
+  position:relative;*/
+
+  /*background: #ECF1E7;
+  padding-left:9px;
+  border-left: solid 1px #000;*/
+}
+#menu ul li ul li a{
+  float: none;
+  margin: 0;
+  position: relative;;
+  top: 50px;
+}
+
+/******************************************************************************/
+
 </style>
 </head>
 <body>
 
 <div class="wrap">
-  <img src="logo.png" alt="logo" class="logo">
+  <div id="logo_wrap"><img src="logo.png" alt="logo" id="logo"></div>
 
-  <div class="menu">
+  <div id="menu">
     <ul>
       <li><center><a href="#">profile</a></center></li>
 
       <li><center><a href="#">schedule</a></center></li>
 
       <li><center><a href="#">notice</a></center>
-        <!-- <ul>
+        <ul>
           <li><a href="#">일반 공지</a></li>
           <li><a href="#">정회원 공지</a></li>
           <li><a href="#">기사</a></li>
-        </ul> -->
+        </ul>
       </li>
 
       <li><center><a href="#">board</a></center>
-        <!-- <ul>
+        <ul>
           <li><a href="#">나무들의 이야기</a></li>
           <li><a href="#">나무들의 속삭임</a></li>
-        </ul> -->
+        </ul>
       </li>
 
       <li><center><a href="#">data</a></center>
-        <!-- <ul>
+        <ul>
           <li><a href="#">공식 자료</a></li>
           <li><a href="#">예전 자료</a></li>
-        </ul> -->
+        </ul>
       </li>
 
       <li><center><a href="#">from.kyo</a></center></li>
-      <li><center><a href="#" id="last_a">login</a></center></li>
+      <li><center><a href="#">login</a></center></li>
     </ul>
   </div>
 </div>
