--- a/SOULTREE/soultree.html
+++ b/SOULTREE/soultree.html
@@ -69,8 +69,10 @@ ul li center{
 #menu ul li ul li a{
   float: none;
   margin: 0;
-  position: relative;;
+  /*position: relative;;
   top: 50px;
+  */
+  display: inline-block;
 }
 
 /******************************************************************************/
