--- a/SOULTREE/soultree.html
+++ b/SOULTREE/soultree.html
@@ -20,7 +20,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background: url("bg_am.jpg") center center no-repeat;
+  background: url("img/bg_am.jpg") center center no-repeat;
   background-size: cover;
   /*border: 3px tomato solid;*/
 }
@@ -82,7 +82,7 @@ ul li center{
 <body>
 
 <div class="wrap">
-  <div id="logo_wrap"><img src="logo.png" alt="logo" id="logo"></div>
+  <div id="logo_wrap"><img src="img/logo.png" alt="logo" id="logo"></div>
 
   <div id="menu">
     <ul>
