--- a/SONAMOO/load.html
+++ b/SONAMOO/load.html
@@ -14,7 +14,7 @@
   letter-spacing: -0.3px
 }
 .wrap{
-  background: url("image/main_bg.jpg") no-repeat center center fixed;
+  background: url("image/load_bg.jpg") no-repeat center center fixed;
   background-size: cover;
   width: 100%; height: 100%;
   text-align: center;
@@ -41,7 +41,7 @@
 <body>
 
 <div class="wrap">
-  <div class="logo"><img src="image/main_logo.png" alt="메인로고이미지"></div>
+  <div class="logo"><img src="image/load_logo.png" alt="메인로고이미지"></div>
   <div class="gnb">
     <ul>
       <li><img src="image/gnb1.png" alt="gnb_1"></li>
