--- a/SONAMOO/main.html
+++ b/SONAMOO/main.html
@@ -4,20 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>소나무</title>
+  <title>소나무2</title>
 <style>
 *{
   margin: 0; padding: 0;
   font-size: 12px;
   color: #333;
   line-height: 20px;
-  letter-spacing: -0.3px
+  letter-spacing: -0.3px;
+  list-style: none;
 }
 .wrap{
-  background: url("image/bg2.gif") no-repeat center center fixed;
-  background-size: cover;
+  background: url("image/bg.gif") no-repeat no-repeat center top;
+  /*background-size: cover;*/
   width: 100%; height: 100%;
   text-align: center;
+}
+/*******************/
+.header ul li{
+  /*display: inline;*/
+  float: left;
+  color: #FFF;
+  text-transform: uppercase;
+  font-size: 20px;
+  margin-top:43px;
+  text-align: center;
+  width: 33%;
 }
 .logo img{
   margin-top: 40px;
@@ -28,6 +40,7 @@
 .gnb ul li{
   display: inline;
 }
+/*******************/
 .footer{
   margin-bottom: 20px;
 }
@@ -36,12 +49,32 @@
   font-size: 17px;
   color: #FFF;
 }
+/*******************/
+.sns ul{
+  position: fixed;
+  right: 30px; bottom: 30px;
+  /*border: 1px tomato solid;*/
+}
+.sns li{
+  margin: 0 0 0 10px;
+  float: left;
+}
 </style>
 </head>
 <body>
 
 <div class="wrap">
-  <div class="logo"><img src="image/logo_char.png" alt="메인로고이미지"></div>
+
+  <div class="header">
+    <img src="image/main_logo.png" alt="sonamoo로고">
+    <ul>
+      <li>profile</li>
+      <li>gallery</li>
+      <li>video</li>
+    </ul>
+  </div>
+
+  <div class="logo"><img src="image/char.png" alt="메인로고이미지"></div>
   <div class="gnb">
     <ul>
       <li><img src="image/gnb1.png" alt="gnb_1"></li>
@@ -53,11 +86,21 @@
       <li><img src="image/gnb7.png" alt=gnb_7""></li>
     </ul>
   </div>
+
   <div class="footer">
     <span>차갑게 얼어붙었던 세상에 일곱개의 달빛이 내리면,<br/>초록달의 새로운 이야기가 시작된다.</span>
     <br/><br/>
     <span>When seven moon-lights land on the frozen earth,<br/>the new strory of Green Moon starts.</span>
     <br/><br/>
+  </div>
+
+  <div class="sns">
+    <ul>
+      <li><img src="image/sns_1.gif" alt="다음카페"></li>
+      <li><img src="image/sns_2.gif" alt="페이스북"></li>
+      <li><img src="image/sns_3.gif" alt="트위터"></li>
+      <li><img src="image/sns_4.gif" alt="유튜브"></li>
+    </ul>
   </div>
 </div>
 
