--- a/ho-ginza/index.html
+++ b/ho-ginza/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="intro.js" charset="utf-8"></script>
+  <script src="fix.js" charset="utf-8"></script>
 </head>
 <body>
 
@@ -16,11 +17,11 @@
     <!-- intro -->
     <div class="intro">
   		<div class="logo"><img src="img/intro_logo.png" alt="HO 鵬" width="228" height="231"></div>
-  		<h1 class="intro_txt"><img src="img/intro_txt.png" alt="横綱を育てた宮城野部屋の本物の味を、銀座で。" width="69" height="297"></h1>
+  		<h1 class="intro_txt"><img src="img/intro_txt.png" alt="横綱を育てた宮城野部屋の本物の味を、銀座で。"></h1>
 		  <div class="line"></div>
 	  </div>
     <!-- /intro -->
-
+<!-- ======================================================================= -->
 
 
     <!-- content -->
@@ -30,7 +31,7 @@
       <div class="header">
 
 				<div class="main_icon">
-          <a href="http://twitter.com/share?url=http://ho-ginza.com/&text=鵬 -HO- ｜横綱を育てた宮城野部屋の本物の味を、銀座で。" target="_blank"><img src="img/btn_twitter.png" alt="Twitter"></a>
+          <a href="http://twitter.com/share?url=http://ho-ginza.com/&text=鵬 -HO- ｜横綱を育てた宮城野部屋の本物の味を、銀座で。"><img src="img/btn_twitter.png" alt="Twitter"></a>
           <img src="img/slash.png" alt="/">
           <a href="http://www.facebook.com/share.php?u=http://ho-ginza.com/"><img src="img/btn_facebook.png" alt="Facebook"></a>
         </div>
@@ -42,54 +43,168 @@
       </div>
       <!-- /header -->
 
+<!-- ======================================================================= -->
+
       <!-- lnb -->
-      <div class="lnb">
-        <div id="lnb_logo"><img src="img/lnb_logo.png" alt="HO 鵬 small_logo"></div>
+      <div class="lnb_area">
 
-        <ul class="lnb_list">
-          <li>
-            <a href="#"><img src="img/lnb_1.png" id="lnb_1" alt="お知らせ"></a>
-            <div class="o"></div>
-          </li>
+        <div class="lnb">
 
-          <li>
-            <a href="#"><img src="img/lnb_2.png" id="lnb_1" alt="お店の想い"></a>
-            <div class="o"></div>
-          </li>
+          <div id="lnb_logo"><img src="img/lnb_logo.png" alt="HO 鵬 small_logo"></div>
 
-          <li>
-            <a href="#"><img src="img/lnb_3.png" id="lnb_1" alt="お品書き"></a>
-            <div class="o"></div>
-          </li>
+          <div class="l"></div>
 
-          <li>
-            <a href="#"><img src="img/lnb_4.png" id="lnb_1" alt="アクセス"></a>
-            <div class="o"></div>
-          </li>
+          <ul class="lnb_list">
+            <li>
+              <a href="#"><img src="img/lnb_1.png" id="lnb_1" alt="お知らせ"></a>
+              <div class="o"></div>
+            </li>
 
-          <li>
-            <a href="#"><img src="img/lnb_5.png" id="lnb_1" alt="お問い合わせ"></a>
-            <div class="o"></div>
-          </li>
+            <li>
+              <a href="#"><img src="img/lnb_2.png" id="lnb_1" alt="お店の想い"></a>
+              <div class="o"></div>
+            </li>
 
-        </ul>
+            <li>
+              <a href="#"><img src="img/lnb_3.png" id="lnb_1" alt="お品書き"></a>
+              <div class="o"></div>
+            </li>
+
+            <li>
+              <a href="#"><img src="img/lnb_4.png" id="lnb_1" alt="アクセス"></a>
+              <div class="o"></div>
+            </li>
+
+            <li>
+              <a href="#"><img src="img/lnb_5.png" id="lnb_1" alt="お問い合わせ"></a>
+              <div class="o"></div>
+            </li>
+          </ul>
+
+        </div>
 
       </div>
       <!-- /lnb -->
 
-
+<!-- ======================================================================= -->
 
       <!-- notice -->
       <div class="notice">
         <img src="img/notice.png" alt="お知らせ">
+
         <dl>
-          <dt></dt>
-          <dd></dd>
+          <dt>２月のお休み</dt>
+          <dd>１１日（土）、１２日（日）、１９日（日）、２６日（日）</dd>
+          <dd>詳細はお電話にてお問合せください。</dd>
         </dl>
       </div>
       <!-- /notice -->
 
+<!-- ======================================================================= -->
 
+      <!-- about -->
+      <div class="about">
+        <img src="img/about_txt.png" id="about_txt" alt="">
+        <img src="img/about_img.png" id="about_img" alt="">
+        <div class="line"></div>
+      </div>
+      <!-- /about -->
+
+<!-- ======================================================================= -->
+
+
+      <div class="partition" style="margin-bottom: 57px;"></div>
+
+
+<!-- ======================================================================= -->
+
+    <!-- menu -->
+    <div class="menu">
+
+      <img src="img/menu_img.png" id="menu_img" alt="">
+
+      <h2 class="menu_tit">
+        <img src="img/menu_tit.png" id="menu_tit" alt="">
+      </h2>
+
+    </div>
+    <!-- /menu -->
+
+<!-- ======================================================================= -->
+
+    <!-- menu_list -->
+    <div id="menu_list">
+      <img src="img/menu_list.png" alt="">
+      <p>&#8251; 別途、消費税（８％）・サービス料（５％）を頂戴いたします。</p>
+    </div>
+    <!-- /menu_list -->
+
+<!-- ======================================================================= -->
+
+    <div id="partition_2">
+      <div class="partition" style="float:right;"></div>
+    </div>
+
+
+<!-- ======================================================================= -->
+
+    <!-- access -->
+    <div id="access">
+      <div id="access_txt">
+        <h2><img src="img/access_tit.png" alt=""></h2>
+
+        <ul>
+          <li>〒104-0061</li>
+          <li>​東京都中央区銀座6-7-6</li>
+          <li>銀座細野ビル2階</li>
+
+          <li>JR 有楽町駅 徒歩8分</li>
+          <li>東京メトロ丸ノ内線 銀座駅 「A1出口」徒歩5分</li>
+        </ul>
+      </div>
+
+      <div id="map_area">
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+         <script type="text/javascript">
+                   google.maps.event.addDomListener(window,'load',function(){
+                      var latlng=new google.maps.LatLng(35.670533, 139.762757);
+
+                       var mapOptions = {
+                           zoom: 16,
+                           center: new google.maps.LatLng(35.670533, 139.762757),
+                           mapTypeId: google.maps.MapTypeId.ROADMAP,
+                           scrollwheel: false,
+                           draggable: true,
+                           styles:[
+                             {
+                               "stylers":[
+                                 { "saturation": -97 },
+                     { "visibility": "simplified" }
+                               ]
+                             }
+               ]
+                       };
+                       var mp = new google.maps.Map(document.getElementById('map'), mapOptions);
+                       var marker = new google.maps.Marker({
+                             position: latlng,
+                             map: mp,
+                             title: 'ちゃんこ屋「鵬」',
+                             icon: new google.maps.MarkerImage(
+                   './img/icon_map.png',         // url
+                   new google.maps.Size(90,102), // size
+                   new google.maps.Point(0,0),  // origin
+                   new google.maps.Point(45,102) // anchor
+                 )
+                         });
+
+                   });
+           </script>
+
+      </div>
+
+    </div>
+    <!-- /access -->
 
     </div>
     <!-- /content -->
