--- a/ho-ginza/index.html
+++ b/ho-ginza/index.html
@@ -21,8 +21,8 @@
 		  <div class="line"></div>
 	  </div>
     <!-- /intro -->
-<!-- ======================================================================= -->
 
+<!-- ======================================================================= -->
 
     <!-- content -->
     <div class="content">
@@ -151,60 +151,30 @@
     <!-- access -->
     <div id="access">
       <div id="access_txt">
-        <h2><img src="img/access_tit.png" alt=""></h2>
+        <h2><img src="img/access_tit.png" id="access_tit" alt=""></h2>
 
         <ul>
           <li>〒104-0061</li>
-          <li>​東京都中央区銀座6-7-6</li>
-          <li>銀座細野ビル2階</li>
-
-          <li>JR 有楽町駅 徒歩8分</li>
-          <li>東京メトロ丸ノ内線 銀座駅 「A1出口」徒歩5分</li>
+          <li>​東京都中央区銀座6-7-6<br/>
+          銀座細野ビル2階<br/><br/><br/>
+          JR 有楽町駅 徒歩8分<br/>
+          東京メトロ丸ノ内線 銀座駅 「A1出口」徒歩5分</li>
         </ul>
       </div>
 
+      <!-- map -->
       <div id="map_area">
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-         <script type="text/javascript">
-                   google.maps.event.addDomListener(window,'load',function(){
-                      var latlng=new google.maps.LatLng(35.670533, 139.762757);
-
-                       var mapOptions = {
-                           zoom: 16,
-                           center: new google.maps.LatLng(35.670533, 139.762757),
-                           mapTypeId: google.maps.MapTypeId.ROADMAP,
-                           scrollwheel: false,
-                           draggable: true,
-                           styles:[
-                             {
-                               "stylers":[
-                                 { "saturation": -97 },
-                     { "visibility": "simplified" }
-                               ]
-                             }
-               ]
-                       };
-                       var mp = new google.maps.Map(document.getElementById('map'), mapOptions);
-                       var marker = new google.maps.Marker({
-                             position: latlng,
-                             map: mp,
-                             title: 'ちゃんこ屋「鵬」',
-                             icon: new google.maps.MarkerImage(
-                   './img/icon_map.png',         // url
-                   new google.maps.Size(90,102), // size
-                   new google.maps.Point(0,0),  // origin
-                   new google.maps.Point(45,102) // anchor
-                 )
-                         });
-
-                   });
-           </script>
-
+        <img src="img/map.png" id="map" alt="">
       </div>
+      <!-- /map -->
 
     </div>
     <!-- /access -->
+
+<!-- ======================================================================= -->
+
+
+
 
     </div>
     <!-- /content -->
