--- a/dean/index.html
+++ b/dean/index.html
@@ -12,7 +12,7 @@
   <div id="container">
     <header></header>
 
-    <section id="gnb_wrap">
+    <section id="gnb_wrap" class="yel">
       <div id="gnb">
         <a href="http://officialdean.com/"><img src="img/logo_96x60.png" alt="official dean"></a>
 
@@ -30,7 +30,72 @@
 
     <!-- content -->
     <section id="content">
-      <img src="img/logo_300x188.png" alt="official dean">
+
+      <div class="logo_300x188"><img src="img/logo_300x188.png" alt="official dean"></div>
+
+      <!-- purchase -->
+      <section id="purchase">
+        <p><span style="font-size: 300%;"><strong>1st EP [130 mood : TRBL]</strong></span></p>
+        <p><span style="font-size: 150%;"><strong>Can be found on iTunes, Apple Music, and other streaming sites.</strong></span></p>
+
+        <!-- purchase_itunes btn -->
+        <ul class="purchase_itunes">
+          <li class="btn"><a href="https://itunes.apple.com/us/album/130-mood-trbl/id1094604739">itunes us</a></li>
+          <li class="btn"><a href="https://itunes.apple.com/gb/album/130-mood-trbl/id1091980376">itunes uk</a></li>
+        </ul>
+
+        <p><span style="font-size: 150%;"><strong>&darr;itunes us↓album purchase&darr;</strong></span></p>
+
+        <!-- purchase btn -->
+        <ul class="purchase_">
+          <li class="btn"><a href="http://www.hottracks.kr/Product/Detail/view/pid/24872/cid/">hottracks</a></li>
+          <li class="btn"><a href="http://po.st/hDEoj2">yes24</a></li>
+          <li class="btn"><a href="http://music.aladin.co.kr/shop/wproduct.aspx?ItemId=79834671&amp;start=slayer">aladin</a></li>
+          <li class="btn"><a href="http://po.st/KMybms">interpark</a></li>
+          <li class="btn"><a href="http://po.st/JjBzQZ">synnara</a></li>
+        </ul>
+      </section>
+
+<!-- ======================================================================= -->
+
+      <!-- soundcloud -->
+      <section id="soundcloud">
+        			<center><iframe width="50%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/213045110&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></center>
+      </section>
+
+<!-- ======================================================================= -->
+
+      <!-- MV -->
+      <section id="mv">
+        <ul>
+          <li><p class="yel"><span style="font-size: 270%;">D (half moon) (Feat. Gaeko of Dynamic Duo)</span></p></li>
+          <li><p><iframe src="https://www.youtube.com/embed/LKiauCIJhv0?showinfo=0" width="1280" height="720" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p></li>
+        </ul>
+
+        <ul>
+          <li><p class="yel"><span style="font-size: 270%;">bonnie &amp; clyde</span></p></li>
+          <li><p><iframe src="https://www.youtube.com/embed/425l9_6ARjE?showinfo=0" width="1280" height="720" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p></li>
+        </ul>
+
+        <div class="studio_box">
+          <ul class="studio">
+            <li><p class="yel"><span style="font-size: 180%;">Listening Session</span></p></li>
+            <li><p><iframe src="https://www.youtube.com/embed/eKU1Us4ikHY?rel=0&amp;controls=0&amp;showinfo=0" width="100%" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p></li>
+          </ul>
+        </div>
+
+        <div class="studio_box">
+          <ul class="studio">
+            <li><p class="yel"><span style="font-size: 180%;">Session of Put My Hands On You</span></p></li>
+            <li><p><iframe src="https://www.youtube.com/embed/U8h61DO1-bU?rel=0&amp;controls=0&amp;showinfo=0" width="100%" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p></li>
+          </ul>
+        </div>
+
+      </section>
+
+<!-- ======================================================================= -->
+
+
     </section>
 
   </div>
