--- a/ho-ginza/index.html
+++ b/ho-ginza/index.html
@@ -46,7 +46,7 @@
 <!-- ======================================================================= -->
 
       <!-- lnb -->
-      <div class="lnb_area">
+      <section class="lnb_area">
 
         <div class="lnb">
 
@@ -56,40 +56,40 @@
 
           <ul class="lnb_list">
             <li>
-              <a href="#"><img src="img/lnb_1.png" id="lnb_1" alt="お知らせ"></a>
+              <a href="#notice"><img src="img/lnb_1.png" id="lnb_1" alt="お知らせ"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#"><img src="img/lnb_2.png" id="lnb_1" alt="お店の想い"></a>
+              <a href="#about"><img src="img/lnb_2.png" id="lnb_1" alt="お店の想い"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#"><img src="img/lnb_3.png" id="lnb_1" alt="お品書き"></a>
+              <a href="#menu"><img src="img/lnb_3.png" id="lnb_1" alt="お品書き"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#"><img src="img/lnb_4.png" id="lnb_1" alt="アクセス"></a>
+              <a href="#menu_list"><img src="img/lnb_4.png" id="lnb_1" alt="アクセス"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#"><img src="img/lnb_5.png" id="lnb_1" alt="お問い合わせ"></a>
+              <a href="#tel"><img src="img/lnb_5.png" id="lnb_1" alt="お問い合わせ"></a>
               <div class="o"></div>
             </li>
           </ul>
 
         </div>
 
-      </div>
+      </section>
       <!-- /lnb -->
 
 <!-- ======================================================================= -->
 
       <!-- notice -->
-      <div class="notice">
+      <section id="notice">
         <img src="img/notice.png" alt="お知らせ">
 
         <dl>
@@ -97,17 +97,17 @@
           <dd>１１日（土）、１２日（日）、１９日（日）、２６日（日）</dd>
           <dd>詳細はお電話にてお問合せください。</dd>
         </dl>
-      </div>
+      </section>
       <!-- /notice -->
 
 <!-- ======================================================================= -->
 
       <!-- about -->
-      <div class="about">
+      <section id="about">
         <img src="img/about_txt.png" id="about_txt" alt="">
         <img src="img/about_img.png" id="about_img" alt="">
         <div class="line"></div>
-      </div>
+      </section>
       <!-- /about -->
 
 <!-- ======================================================================= -->
@@ -119,7 +119,7 @@
 <!-- ======================================================================= -->
 
     <!-- menu -->
-    <div class="menu">
+    <section id="menu">
 
       <img src="img/menu_img.png" id="menu_img" alt="">
 
@@ -127,16 +127,16 @@
         <img src="img/menu_tit.png" id="menu_tit" alt="">
       </h2>
 
-    </div>
+    </section>
     <!-- /menu -->
 
 <!-- ======================================================================= -->
 
     <!-- menu_list -->
-    <div id="menu_list">
+    <section id="menu_list">
       <img src="img/menu_list.png" alt="">
       <p>&#8251; 別途、消費税（８％）・サービス料（５％）を頂戴いたします。</p>
-    </div>
+    </section>
     <!-- /menu_list -->
 
 <!-- ======================================================================= -->
@@ -149,9 +149,9 @@
 <!-- ======================================================================= -->
 
     <!-- access -->
-    <div id="access">
+    <section id="access">
       <div id="access_txt">
-        <h2><img src="img/access_tit.png" id="access_tit" alt=""></h2>
+        <h2><img src="img/access_tit.png" alt=""></h2>
 
         <ul>
           <li>〒104-0061</li>
@@ -167,19 +167,37 @@
         <img src="img/map.png" id="map" alt="">
       </div>
       <!-- /map -->
-
-    </div>
+    </section>
     <!-- /access -->
 
 <!-- ======================================================================= -->
 
+    <!-- tel -->
+    <section id="tel">
+      <img src="img/tel_img.png" alt="TEL：03-6264-5635">
+      <div class="line"></div>
+    </section>
+    <!-- /tel -->
 
+<!-- ======================================================================= -->
 
+    <!-- footer -->
+    <section id="footer">
+      <div id="footer_txt">
+        <h2>鵬 -HO-</h2>
+				<p class="address">所在地 〒104-0061 ​東京都中央区銀座6-7-6 銀座細野ビル2階<br>
+					連絡先 TEL：03-6264-5635　※予約制<br>
+					営業時間 17:00～23:00 (L.O.22:00) / 定休日 不定休</p>
+				<p class="copy">Copyright 2016 TSUNA Corporation all rights reserved.</p>
+      </div>
+    </section>
+    <!-- /footer -->
 
     </div>
     <!-- /content -->
 
   </div>
+  <!-- /container -->
 
 </body>
 </html>
