--- a/dean/main.html
+++ b/dean/main.html
@@ -97,104 +97,116 @@
 
 <!-- ======================================================================= -->
 
-    <!-- news -->
-    <section id="news">
-      <h1 class="yel">news</h1>
+      <!-- news -->
+      <section id="news">
+        <h1 class="yel">news</h1>
 
-      <div class="news">
-        <div class="news_box">
-          <dl>
-            <dt><img src="img/album_1.jpg" alt="I'm Not Sorry"></dt>
-            <dd class="yel">I'm Not Sorry ft. Eric Bellinger</dd>
-          </dl>
-            <p>Available on iTunes</p>
+        <div class="news">
+          <div class="news_box">
+            <dl>
+              <dt><img src="img/album_1.jpg" alt="I'm Not Sorry"></dt>
+              <dd class="yel">I'm Not Sorry ft. Eric Bellinger</dd>
+            </dl>
+              <p>Available on iTunes</p>
 
-          <ul>
-            <li><a class="play_btn">play</a></li>
-            <li><a class="play_btn">enqueue</a></li>
-          </ul>
+            <ul>
+              <li><a class="play_btn">play</a></li>
+              <li><a class="play_btn">enqueue</a></li>
+            </ul>
+          </div>
+
+
+          <div class="news_box">
+            <dl>
+              <dt><img src="img/album_2.jpg" alt="Put My Hands On You"></dt>
+              <dd class="yel">Put My Hands On You ft. Anderson .Paak (prod. by esta. &amp; Mr. Carmack)</dd>
+            </dl>
+              <p>Available on iTunes</p>
+
+            <ul>
+              <li><a class="play_btn">play</a></li>
+              <li><a class="play_btn">enqueue</a></li>
+              <li><a class="download_btn">download</a></li>
+            </ul>
+          </div>
+
+
+          <div class="news_box">
+            <dl>
+              <dt><img src="img/album_3.jpg" alt="Foreign ~ k o r e a n ~"></dt>
+              <dt class="yel">Foreign &sim; k o r e a n &sim;</dt>
+            </dl>
+              <p>Available on iTunes</p>
+
+            <ul>
+              <li><a class="play_btn">play</a></li>
+              <li><a class="play_btn">enqueue</a></li>
+            </ul>
+          </div>
+
+          <div class="news_box">
+            <dl>
+              <dt><img src="img/album_4.jpg" alt="Here & Now (feat. Mila J)<"></dt>
+              <dd class="yel">Here &amp; Now (feat. Mila J)</dd>
+            </dl>
+              <p>Available on iTunes</p>
+
+            <ul>
+              <li><a class="play_btn">play</a></li>
+              <li><a class="play_btn">enqueue</a></li>
+            </ul>
+          </div>
+
+          <div class="news_box">
+            <dl>
+              <dt><img src="img/album_5.jpg" alt="Here & Now ft. Mila J (esta. Remix)<"></dt>
+              <dd class="yel">Here &amp; Now ft. Mila J (esta. Remix)</dd>
+            </dl>
+              <p>Available on iTunes</p>
+
+            <ul>
+              <li><a class="play_btn">play</a></li>
+              <li><a class="play_btn">enqueue</a></li>
+            </ul>
+          </div>
+
         </div>
-
-
-        <div class="news_box">
-          <dl>
-            <dt><img src="img/album_2.jpg" alt="Put My Hands On You"></dt>
-            <dd class="yel">Put My Hands On You ft. Anderson .Paak (prod. by esta. &amp; Mr. Carmack)</dd>
-          </dl>
-            <p>Available on iTunes</p>
-
-          <ul>
-            <li><a class="play_btn">play</a></li>
-            <li><a class="play_btn">enqueue</a></li>
-            <li><a class="download_btn">download</a></li>
-          </ul>
-        </div>
-
-
-        <div class="news_box">
-          <dl>
-            <dt><img src="img/album_3.jpg" alt="Foreign ~ k o r e a n ~"></dt>
-            <dt class="yel">Foreign &sim; k o r e a n &sim;</dt>
-          </dl>
-            <p>Available on iTunes</p>
-
-          <ul>
-            <li><a class="play_btn">play</a></li>
-            <li><a class="play_btn">enqueue</a></li>
-          </ul>
-        </div>
-
-        <div class="news_box">
-          <dl>
-            <dt><img src="img/album_4.jpg" alt="Here & Now (feat. Mila J)<"></dt>
-            <dd class="yel">Here &amp; Now (feat. Mila J)</dd>
-          </dl>
-            <p>Available on iTunes</p>
-
-          <ul>
-            <li><a class="play_btn">play</a></li>
-            <li><a class="play_btn">enqueue</a></li>
-          </ul>
-        </div>
-
-        <div class="news_box">
-          <dl>
-            <dt><img src="img/album_5.jpg" alt="Here & Now ft. Mila J (esta. Remix)<"></dt>
-            <dd class="yel">Here &amp; Now ft. Mila J (esta. Remix)</dd>
-          </dl>
-            <p>Available on iTunes</p>
-
-          <ul>
-            <li><a class="play_btn">play</a></li>
-            <li><a class="play_btn">enqueue</a></li>
-          </ul>
-        </div>
-
-      </div>
-    </section>
+      </section>
 
 <!-- ======================================================================= -->
 
-    <!-- sns -->
-    <section id="sns">
+      <!-- sns -->
+      <section id="sns">
 
-      <div id="instagram_box">
-        <div class="icon_box">
-          <a href="https://instagram.com/deantrbl/"><i class="fa fa-instagram yel"></i></a>
+        <div id="instagram_box">
+          <div class="icon_box">
+            <a href="https://instagram.com/deantrbl/"><i class="fa fa-instagram yel"></i></a>
+          </div>
+          <p>Unable to show Instagram photos</p>
         </div>
-        <p>Unable to show Instagram photos</p>
-      </div>
 
-      <div id="twitter_box">
-        <a href="https://twitter.com/deantheofficial"><i class="fa fa fa-twitter yel"></i></a>
-        <aside class="twitter_txt">
-        </aside>
-      </div>
+        <div id="twitter_box">
+          <a href="https://twitter.com/deantheofficial"><i class="fa fa fa-twitter yel"></i></a>
+          <aside class="twitter_txt">
+          </aside>
+        </div>
 
-    </section>
+        <!-- instagram -->
+        <div id="instagram">
+          <img src="img/sns_1.jpg" alt="">
+          <img src="img/sns_2.jpg" alt="">
+          <img src="img/sns_3.jpg" alt="">
+          <img src="img/sns_4.jpg" alt="">
+          <img src="img/sns_5.jpg" alt="">
+          <img src="img/sns_6.jpg" alt="">
+          <img src="img/sns_7.jpg" alt="">
+        </div>
 
+      </section>
 
-    </section>
+<!-- ======================================================================= -->
+
+    </section><!-- /content -->
 
   </div>
 </body>
